--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "directory-tree": "^2.2.4",
     "express": "^4.17.1",
     "fluent-ffmpeg": "^2.1.2",
+    "js-base64": "^2.6.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
+    "react-json-view": "^1.19.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0"
   },
