--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-icons": "^3.10.0",
     "react-json-view": "^1.19.1",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "reflux": "^6.4.1"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.10.3",
