--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chromecast-api": "^0.3.3",
     "directory-tree": "^2.2.4",
     "express": "^4.17.1",
+    "express-ws": "^4.0.0",
     "fluent-ffmpeg": "^2.1.2",
     "js-base64": "^2.6.2",
     "normalize.css": "^8.0.1",
