removed device listener on ws close

--- a/config.json
+++ b/config.json
@@ -1,6 +1,9 @@
 {
   "folders": [
     "G:\\Downloads",
-    "G:\\movies"
+    "G:\\movies",
+    "G:\\Encodes",
+    "G:\\vm_share2",
+    "H:\\share"
   ]
 }
